fix contrast ratios

--- a/src/components/nav.module.css
+++ b/src/components/nav.module.css
@@ -10,3 +10,7 @@
     float: right;
     margin: 0.5% 1%;
 }
+
+.link {
+    color: #ffffff;
+}
