--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,9 +14,5 @@ p {
 }
 
 a {
-    color: #ffa500;
-}
-
-a:visited {
-    color: #e48100;
+    color: #943700;
 }
